# hiredis

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  index.html  search-index.js
examples/: workflow.rs
hiredis/: enum.ErrorKind.html  enum.Reply.html  fn.connect.html  index.html  struct.Context.html  struct.Error.html  trait.AsBytes.html  type.Result.html
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Drop.js
src/: context.rs  error.rs  lib.rs
src/hiredis/src/: lib.rs.html
tests/: lib.rs
