[package]
name = "hiredis"
version = "0.1.0"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/hiredis"
homepage = "https://github.com/stainless-steel/hiredis"
documentation = "https://stainless-steel.github.io/hiredis"
description = "The package provides an interface to Hiredis."

[dependencies]
hiredis-sys = "*"
libc = "*"
